plugins {
    id 'io.freefair.lombok' version '8.11'
    id 'net.neoforged.gradle.userdev' version '7.0.171'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
}

group = mod_group
base {
    archivesName = mod_id
}
version = "mc${mc_version}-v${mod_version}"

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-Xmaxerrs', '9999']
}

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))

// Parchment mappings temporarily disabled: parchment-1.21.1:2024.07.28 not yet available
// Re-enable once a valid parchment_version is available for MC 1.21.1
// subsystems {
//     parchment {
//         mappingsVersion = parchment_version
//         minecraftVersion = mc_version
//     }
// }

runs {
    configureEach {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'
    }

    client {
        systemProperty 'forge.enabledGameTestNamespaces', mod_id
    }

    server { }

    data {
        arguments.addAll '--mod', mod_id, '--all',
                '--existing', file('src/main/resources').absolutePath,
                '--existing', file('src/generated/resources').absolutePath,
                '--output', file('src/generated/resources').absolutePath
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"

    // Patchouli — temporarily disabled: 1.21.1-88-NEOFORGE not available on maven.blamejared.com (Gap L-10)
    // runtimeOnly "vazkii.patchouli:Patchouli:${patchouli_version}"
    // compileOnly "vazkii.patchouli:Patchouli:${patchouli_version}:api"

    // Test mods for runtime
    runtimeOnly "maven.modrinth:emi:1.1.22+1.21.1+neoforge"
    runtimeOnly "maven.modrinth:pipez:neoforge-1.21.1-1.2.19"
    runtimeOnly "maven.modrinth:create:mc1.21.1-6.0.9"
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes([
            "Specification-Title": mod_id,
            "Specification-Vendor": mod_author,
            "Specification-Version": "1",
            "Implementation-Title": project.name,
            "Implementation-Version": mod_version,
            "Implementation-Vendor" : mod_author,
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            "mod_id":                   project.mod_id,
            "mod_version":              project.mod_version,
            "mod_icon_path":            project.mod_icon_path,
            "mod_title":                project.mod_title,
            "mod_description":          project.mod_description,
            "mod_url":                  project.mod_url,
            "mod_author":               project.mod_author,
            "mod_license":              project.mod_license,
            "mc_version_range":         project.mc_version_range,
            "neo_version_range":        project.neo_version_range,
            "patchouli_version_range":  project.patchouli_version_range,
            "version":                  project.mod_version
    ]

    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }

        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/MuradAkh/LittleLogistics")

            credentials {
                username = System.getenv("GITHUB_ACTOR")
                password = System.getenv("GITHUB_TOKEN")
            }
        }

        maven {
            name = "edtoaster.ca"
            url = uri("https://maven.edtoaster.ca/")

            credentials {
                username = System.getenv("EDTOASTER_MAVEN_USER")
                password = System.getenv("EDTOASTER_MAVEN_PASS")
            }
        }
    }
}

repositories {
    maven {
        name = "Jared"
        url 'https://maven.blamejared.com'
    }
    maven {
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }
}
